# nsearch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: crawler.rs  index.rs  lib.rs  main.rs  query.rs
src/analysis/: tokenizer.rs
src/crawler/: fetcher.rs  frontier.rs
src/index/: builder.rs  postings.rs  store.rs
src/query/: parser.rs  retrieval.rs  scorer.rs  snippet.rs
tests/: integration_test.rs
