[package]
name = "nsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest  = {version = "0.12", features = ["rustls-tls"]}
scraper = "0.22"
url = "2"
anyhow = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"
tokio   = { version = "1", features = ["full"] }